Fixed z-index some divs

--- a/src/components/cv/index.scss
+++ b/src/components/cv/index.scss
@@ -74,7 +74,6 @@ svg {
   height: 100vh;
   background-color: rgba(38, 41, 43, 0.961);
   backdrop-filter: 10px;
-  z-index: 1;
   margin-bottom: 1.2rem;
   font-size: 1.5rem;
   font-weight: 300;
